# rs-openapi-generator

./: Cargo.toml  README.md
api-spec/: Cargo.toml
api-spec/src/: endpoint.rs  lib.rs
generator/: Cargo.toml
generator/resources/typescript_template_example/: template.toml  types.ts.liquid
generator/src/: lib.rs
generator/tests/: generate_typescript_client_test.rs
openapi-parser/: Cargo.toml
openapi-parser/src/: lib.rs  models.rs
openapi-parser/src/models/: openapi.rs  openapi_info.rs
openapi-parser/tests/: parse_example_test.rs
