[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = "0.26.4"
api-spec = { path = "../api-spec" }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.5"

[dev-dependencies]
openapi-parser = { path = "../openapi-parser" }
